--- a/resources/style.css
+++ b/resources/style.css
@@ -18,7 +18,7 @@ sub { top: 0.4em; }
 #site-header {
     padding: 0.70em 1em 0.5em 1em;
     margin: 0;
-    font-size: 2em;
+    font-size: 36px;
     background-color: #333;
     border-color: #F0C808; /* gold */
     border-width: 0 0 0.125em 0;
@@ -90,7 +90,7 @@ sub { top: 0.4em; }
 .post-date {
     font-family: 'Nueton', Serif;
     color: #666;
-    font-size: 0.75em;
+    font-size: 12px;
     letter-spacing: 0.1em;
     border-bottom: 1px dotted #666;
     text-transform: uppercase;
@@ -148,7 +148,7 @@ h1, h2, h3, h4 {
 }
 
 .post-body {
-    font-size: 1.25em;
+    font-size: 20px;
 }
 
 .pagination a {
